--- a/1_home.html
+++ b/1_home.html
@@ -27,6 +27,7 @@ Creativity (50 Points)
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/skippr.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="~/vendor/font-awesome/css/font-awesome.min.css">
     <title> J. Rives Music </title>
   </head>
 
