--- a/1_home.html
+++ b/1_home.html
@@ -28,6 +28,7 @@ Creativity (50 Points)
     <link rel="stylesheet" href="assets/css/skippr.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="~/vendor/font-awesome/css/font-awesome.min.css">
+    href="~/vendor/font-awesome/css/font-awesome.min.css"
     <title> J. Rives Music </title>
   </head>
 
@@ -186,7 +187,10 @@ Creativity (50 Points)
 <!--div wrapper close^^-->
 
 
-
+  href="~/vendor/font-awesome/css/font-awesome.min.css"
+  
+  <link href="~/vendor/font-awesome/css/font-awesome.min.css">
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <script type="text/javascript" src="assets/js/main.js"></script>
