--- a/1_home.html
+++ b/1_home.html
@@ -28,7 +28,8 @@ Creativity (50 Points)
     <link rel="stylesheet" href="assets/css/skippr.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="~/vendor/font-awesome/css/font-awesome.min.css">
-    href="~/vendor/font-awesome/css/font-awesome.min.css"
+    / - href="vendor/font-awesome/css/font-awesome.min.css"
+    ~/ - href="~/vendor/font-awesome/css/font-awesome.min.css"
     <title> J. Rives Music </title>
   </head>
 
@@ -187,7 +188,8 @@ Creativity (50 Points)
 <!--div wrapper close^^-->
 
 
-  href="~/vendor/font-awesome/css/font-awesome.min.css"
+  / - href="vendor/font-awesome/css/font-awesome.min.css"
+    ~/ - href="~/vendor/font-awesome/css/font-awesome.min.css"
   
   <link href="~/vendor/font-awesome/css/font-awesome.min.css">
   
