--- a/1_home.html
+++ b/1_home.html
@@ -27,9 +27,8 @@ Creativity (50 Points)
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/skippr.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="~/vendor/font-awesome/css/font-awesome.min.css">
-    / - href="vendor/font-awesome/css/font-awesome.min.css"
-    ~/ - href="~/vendor/font-awesome/css/font-awesome.min.css"
+    <~/ - href="~/vendor/font-awesome/css/font-awesome.min.css">
+    </ - href="vendor/font-awesome/css/font-awesome.min.css">
     <title> J. Rives Music </title>
   </head>
 
@@ -187,11 +186,6 @@ Creativity (50 Points)
 </div>
 <!--div wrapper close^^-->
 
-
-  / - href="vendor/font-awesome/css/font-awesome.min.css"
-    ~/ - href="~/vendor/font-awesome/css/font-awesome.min.css"
-  
-  <link href="~/vendor/font-awesome/css/font-awesome.min.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
